# PA

./: CMakeLists.txt  PA.qrc  PA.slnx  PA.vcxproj  PA.vcxproj.filters  main.cpp  ui_HomePage.h  ui_MainWindow.h  ui_ParamPage.h
Logging/: Logger.cpp  Logger.h
MainWindow/: HeaderBar.cpp  HeaderBar.h  MainWindow.cpp  MainWindow.h
Pages/CScanPage/: CScanPage.cpp  CScanPage.h
Pages/HomePage/: HomePage.cpp  HomePage.h  HomePage.ui
Pages/MeasurePage/: MeasurePage.cpp  MeasurePage.h
Pages/ParamPage/: AnalysisParamPage.cpp  AnalysisParamPage.h  EncoderParamPage.cpp  EncoderParamPage.h  GateParamPage.cpp  GateParamPage.h  ImagingParamPage.cpp  ImagingParamPage.h  ParamPage.CScanPages.cpp  ParamPage.CalibrationPage.cpp  ParamPage.GatePage.cpp  ParamPage.Model.cpp  ParamPage.ProbePage.cpp  ParamPage.ReceivePage.cpp  ParamPage.ScanPage.cpp  ParamPage.TransmitPage.cpp  ParamPage.WedgePage.cpp  ParamPage.WorkpiecePage.cpp  ParamPage.cpp  ParamPage.h  ParamPageUiHelpers.h  ProbeParamPage.cpp  ProbeParamPage.h  ReceiveParamPage.cpp  ReceiveParamPage.h  ScanParamPage.cpp  ScanParamPage.h  TcgParamPage.cpp  TcgParamPage.h  TransmitParamPage.cpp  TransmitParamPage.h  WedgeParamPage.cpp  WedgeParamPage.h  WorkpieceParamPage.cpp  WorkpieceParamPage.h
Ultrasonic/: AppState.cpp  AppState.h  CScanDataCodec.cpp  CScanDataCodec.h  CScanEngine.cpp  CScanEngine.h  CScanIOManager.cpp  CScanIOManager.h  CTSPA22SDriver.cpp  CTSPA22SDriver.h  CalibrationController.cpp  CalibrationController.h  ColorMap.h  ConnectionManager.cpp  ConnectionManager.h  DataPacketProcessor.cpp  DataPacketProcessor.h  DataTypes.h  IDriver.h  PAParams.h  ParameterDispatcher.cpp  ParameterDispatcher.h  README.md  ReadingCalculator.h  Theme.h
Widgets/AScanWidget/: AScanWidget.cpp  AScanWidget.h
Widgets/BScanWidget/: BScanWidget.cpp  BScanWidget.h
Widgets/CScanWidget/: CScanWidget.cpp  CScanWidget.h
docs/: PA打包与升级操作手册.md  架构优化评估报告_20260717.md
installer/: PA.iss  README.md
resources/: app_resources.qrc
scripts/: build_installer.cmd  build_installer.ps1
